<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/showPasswordCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/show_password" />

    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/roles_array"
        android:layout_marginTop="12dp" />

    <Spinner
        android:id="@+id/shiftSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/shift_array"
        android:layout_marginTop="12dp" />

    <Spinner
        android:id="@+id/teamsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/team_arrays"
        android:layout_marginTop="12dp" />



</LinearLayout>

