<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@color/rosterHeaderBackground"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/headerUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:layout_marginStart="5dp"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/headerRole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/role"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center" />

    <TextView
        android:id="@+id/headerShift"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/shifts"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center" />
</LinearLayout>
